# sorhta-freertos-rust

./: Cargo.toml  README.md  analyze.sh  build.rs  build.sh  build.sh.bak  dumps  freertos-s32g3-rust_0.1.0.bb  link.ld  memory.x  setup.sh
.cargo/: config.toml
src/: exceptions.S  linflex_console.S  main.rs  start.S
src/arch/: aarch64.rs  exceptions.rs  gic.rs  mod.rs  s32g3.rs  smc.rs  svc.rs
src/drivers/: mod.rs  uart.rs
src/freertos/: mod.rs  port.rs  queue.rs  tasks.rs
